tests/cases/compiler-development/artifact/errors/diagnostic-borrow-conflict.diagnostic
diagnostic error code=O0001 family=ownership source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-borrow-conflict.ari" line=7 column=36 byte_start=144 byte_end=147 message="cannot immutably borrow mutably borrowed binding 'value'" snippet="  --> tests/cases/compiler-development/artifact/errors/diagnostic-borrow-conflict.ari:7:36\n   |\n 7 |   return needs_both(ref mut value, ref value);\n   |                                    ^^^"
